--- a/RayTracer.vcxproj
+++ b/RayTracer.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="geometry.h" />
     <ClInclude Include="hittable.h" />
