--- a/RayTracer.vcxproj
+++ b/RayTracer.vcxproj
@@ -154,8 +154,11 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="geometry.h" />
+    <ClInclude Include="Header.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="hittable_list.h" />
+    <ClInclude Include="material.h" />
+    <ClInclude Include="multithreading.h" />
     <ClInclude Include="raytracer.h" />
     <ClInclude Include="sphere.h" />
     <ClInclude Include="ray.h" />
